Development
	Resize patch from Diogo
	When hiding controls, keep playback window the same size, when not fullscreen or embedded
	Fix problem with 'Save As..' where filename started with a /
	Updated French translation
	Only show audio channels in file details when not 0
	Map 'Show/Hide Subtitles' to V hotkey, since that is the mplayer default
	Add F11 as another way to go fullscreen, think that is 5 ways now... crazy
	Show error dialog when save fails
	Apply framedrop setting immediately on Preferences close
	Add in screenshot filter
	Pass keys to mplayer, if not handled
	Add Ctrl-D shortcut for details window
	J key overloaded incorrectly
	Add number of audio channels to details display
	More config options and enhancements from Diogo
	Fix crash when dragging and dropping multiple files to playlist
	Some minor GUI changes to preferences dialog
	Take Diogo's OSD change patch into consideration and only update OSD level on value change
	Apply framedrop page from Diogo Franco <diogomfranco@gmail.com>
	Add option to specify subtitle color
	Update gconf schema for new subtitle stored values
	Only Inhibit screen save while video media is playing
	Added support for subtitle code page selection
	Implement subtitle font selection and font scaling, still to do code pages
	Adding sr and sr@latin translations by Милош Поповић <gpopac@gmail.com>
	Minor change to initialization, make sure that window for mplayer is initialized and realized
		if it is not, sometimes xv output fails
	Hide the file details area when we go fullscreen
	Don't hang when mplayer crashes and report error
	Move File->Details into the main window
	Break out of drop callback if filename is NULL
0.6.1
	Updated Korean translation by ByeongSik Jeon
	Take off the hint on the File->Details window eventually this data should be moved to the main window
	Updated Polish and French translations, by the usual suspects
	After randomizing, select first item on the list