@@ -1,4 +1,5 @@
 Development
+	Added patch for quit on complete option to command line
 	Resize patch from Diogo
 	When hiding controls, keep playback window the same size, when not fullscreen or embedded
 	Fix problem with 'Save As..' where filename started with a /
